Правки после ревью к восьмому проекту

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<p>Всё прошло очень легко, а задачи казались простыми и понятными.</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -78,6 +78,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -134,7 +135,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -142,6 +143,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -192,7 +194,7 @@
 					<p>Все получилось! Но сомнения конечно были!</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -200,6 +202,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -255,7 +258,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -263,6 +266,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -319,7 +323,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -327,6 +331,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -380,7 +385,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -388,6 +393,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -443,7 +449,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -451,6 +457,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -512,7 +519,7 @@
 					</p>
 				</div>
 				<div class="card__button">
-					<button type="button" class="card__icon-button" aria-hidden="true">
+					<button type="button" class="card__icon-button">
 						<svg
 							class="like-icon"
 							width="39"
@@ -520,6 +527,7 @@
 							viewBox="0 0 39 36"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
+							aria-hidden="true"
 						>
 							<g class="heart">
 								<path
@@ -561,7 +569,7 @@
 				</svg>
 				<span class="button__text">Сохранить на память</span>
 			</button>
-			<dialog id="save__dialog">
+			<dialog id="save__dialog" class="save-dialog">
 				<div class="dialog__content">
 					<svg
 						class="floppy-dialog"
